CSS: Fix wrong font-size of code

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -82,7 +82,6 @@ table, th, td {
 
 code {
   font-family: $ubuntu-mono;
-  font-size: 16px;
   color: black;
   background: white-smoke;
 }
